example/filters.txt
^ansible-[^:]*:
^cron:
^CRON:
^crontab:
^dbus: \[system\] Activating via systemd: service name='org\.freedesktop\.hostname1' unit='dbus-org\.freedesktop\.hostname1\.service'$
^dbus: \[system\] Successfully activated service 'org\.freedesktop\.hostname1'$
^dbus: \[system\] Successfully activated service 'org\.freedesktop\.systemd1'$
^emacs:
^kbd: Setting console screen modes and fonts\.$
^networking: Configuring network interfaces\.\.\.Waiting for DAD\.\.\. Done$
^networking: done\.$
^nullmailer: Delivery complete, 0 message\(s\) remain\.$
^nullmailer: Rescanning queue\.$
^nullmailer: Sent file\.$
^nullmailer: smtp: Succeeded:
^nullmailer: Starting delivery, [0-9]+ message\(s\) in queue\.$
^nullmailer: Starting delivery:
^nullmailer: Starting mail-transfer-agent: nullmailer\.$
^nullmailer: Stopping mail-transfer-agent: nullmailer\.$
^nullmailer: Trigger pulled\.$
^smtpproxy: Client disconnected;
^smtpproxy: Error: client spoke before its turn;
^smtpproxy: Error: DNSBL check positive;
^smtpproxy: Error: duplicate MAIL command;
^smtpproxy: Error: error reading mail data;
^smtpproxy: Error: missing sender;
^smtpproxy: Error reading from client;
^smtpproxy: Error: relay access denied;
^smtpproxy: Error: writing server greeting;
^smtpproxy: New connection;
^smtpproxy: SMTP proxy started;
^sshd: Accepted password for
^sshd: Accepted publickey for
^sshd: Address [^ ]+ maps to [^ ]+, but this does not map back to the address - POSSIBLE BREAK-IN ATTEMPT!$
^sshd: Bad protocol version identification
^sshd: Connection closed by
^sshd: Did not receive identification string from
^sshd: error: Received disconnect from
^sshd: Exiting on signal 15$
^sshd: Failed (none|password) for invalid user
^sshd: fatal: Read from socket failed: Connection reset by peer \[preauth\]$
^sshd: input_userauth_request: invalid user
^sshd: Invalid user [^ ]+ from
^sshd: PAM 2 more authentication failures;
^sshd: pam_unix\(sshd:auth\): authentication failure;
^sshd: pam_unix\(sshd:auth\): check pass; user unknown
^sshd: pam_unix\(sshd:session\): session closed for user
^sshd: pam_unix\(sshd:session\): session closed for user
^sshd: pam_unix\(sshd:session\): session opened for user
^sshd: pam_unix\(sshd:session\): session opened for user
^sshd: Received disconnect from
^sshd: Received SIGHUP; restarting\.$
^sshd: Received signal 15; terminating\.$
^sshd: Server listening on 0.0.0.0 port 22\.$
^sshd: Server listening on :: port 22\.$
^sshd: syslogin_perform_logout: logout\(\) returned an error$
^sshd: User root from [^ ]+ not allowed because not listed in AllowUsers$
^su:
^sudo: [^ ]+ : \(command continued\)
^sudo: [^ ]+ : TTY=
^sudo: pam_unix\(sudo:session\): session closed for user
^sudo: pam_unix\(sudo:session\): session closed for user
^sudo: pam_unix\(sudo:session\): session opened for user
^sudo: pam_unix\(sudo:session\): session opened for user
^sudo: pam_unix\(sudo:session\): session opened for user
^su: pam_unix\(su:session\): session closed for user
^su: pam_unix\(su:session\): session opened for user
^su: Successful su for
^systemd-journald\.service: Journal started$
^systemd-journald\.service: Permanent journal is using
^systemd-journald.service: Time spent on flushing to
^vzquota: /etc/init\.d/vzquota: 15: \[: 0: unexpected operator$
